--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,11 @@
 	<meta name="title" content="World's Best Beanie | LLuchus Official Website" />
 	<meta name="description" content="World's Best Beania, thoughtfully designed, Made with the finest Wool." />
   <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	<link rel="shortcut icon" id="favicon" href="favicon.ico">
+	<link rel="shortcut icon" id="favicon" href="images/favicon.ico">
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <script type="text/javascript" src="purejs_onepage_scroll/onepagescroll.js"></script>
-  <link href='purejs_onepage_scroll/onepage-scroll.css' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="js/onepagescroll.js"></script>
+  <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
   <style>
     html {
       height: 100%;
@@ -246,7 +246,7 @@
     }
 
     .main section.page1 {
-      background: url(purejs_onepage_scroll/background-page-1-1.jpg) no-repeat;
+      background: url(images/background-page-1-1.jpg) no-repeat;
     }
     .main section.page1 h1 {
       float: none;
@@ -280,7 +280,7 @@
       text-align: center;
     }
     .main section.page2 {
-      background: url(purejs_onepage_scroll/background-website.jpg) no-repeat center ;
+      background: url(images/background-website.jpg) no-repeat center ;
     }
     .main section.page2 > img {
       position: absolute;
@@ -311,7 +311,7 @@
       color: #FFF;
       }
     .main section.page3 {
-      background:url(purejs_onepage_scroll/background-page-3-2.jpg) no-repeat ;
+      background:url(images/background-page-3-2.jpg) no-repeat ;
     }
     .main section.page3 .page_container {
       overflow: hidden;
@@ -340,7 +340,7 @@
       }
     
     .main section.page4 {
-      background:url(purejs_onepage_scroll/background-page-4-6.jpg) no-repeat ;
+      background:url(images/background-page-4-6.jpg) no-repeat ;
     }
     .main section.page4 > img {
       position: absolute;
@@ -530,8 +530,8 @@
       }
     }
 	</style>
-	<link rel="stylesheet" href="../css/demo.css">
-  <script src="../js/demo.js"></script>
+	<link rel="stylesheet" href="css/demo.css">
+  <script src="js/demo.js"></script>
 </head>
 <body>
     <div id="fb-root"></div>
@@ -540,7 +540,7 @@
 	  <div class="main">
 
       <section class="page1">
-        <img class="image_page_1" src="purejs_onepage_scroll/phones.png" alt="phones">
+        <img class="image_page_1" src="images/phones.png" alt="phones">
         <div class="page_container">
           <h1>World's Best Beanie</h1>
           <h2>Thoughtfully Designed, Made with the Finest Wool.</h2>
